[gd_scene load_steps=3 format=2]

[ext_resource path="res://screens/landing_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/default.theme" type="Theme" id=2]

[node name="LandingScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.172549, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RootControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="PanelContainer" parent="RootControl"]
visible = false
anchor_right = 1.0
anchor_bottom = 0.05
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="RootControl/TopBar"]
margin_left = 9.0
margin_top = 6.0
margin_right = 1581.0
margin_bottom = 32.0

[node name="File" type="MenuButton" parent="RootControl/TopBar/HBoxContainer"]
margin_right = 41.0
margin_bottom = 26.0
text = "File"

[node name="MenuButton2" type="MenuButton" parent="RootControl/TopBar/HBoxContainer"]
margin_left = 47.0
margin_right = 88.0
margin_bottom = 26.0
focus_mode = 2
text = "File"

[node name="TabContainer" type="TabContainer" parent="RootControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
drag_to_rearrange_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Runners" type="PanelContainer" parent="RootControl/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.5
margin_top = 35.5
margin_right = -7.5
margin_bottom = -7.5
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="RootControl/TabContainer/Runners"]
margin_left = 9.0
margin_top = 6.0
margin_right = 1556.0
margin_bottom = 831.0

[node name="VBoxContainer" type="VBoxContainer" parent="RootControl/TabContainer/Runners/ScrollContainer"]
margin_right = 1547.0
margin_bottom = 26.0
size_flags_horizontal = 3

[node name="DefaultViewer" type="Button" parent="RootControl/TabContainer/Runners/ScrollContainer/VBoxContainer"]
margin_right = 1547.0
margin_bottom = 26.0
text = "Default Viewer"

[node name="Settings" type="PanelContainer" parent="RootControl/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.5
margin_top = 35.5
margin_right = -7.5
margin_bottom = -7.5
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="About" type="PanelContainer" parent="RootControl/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.5
margin_top = 35.5
margin_right = -7.5
margin_bottom = -7.5
size_flags_horizontal = 3
size_flags_vertical = 3
